--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -1,11 +1,11 @@
-.flex-container {
+/* .flex-container {
     display: flex;
     justify-content: center;
-}
+} */
 
 .flex-container>.boardLink {
-background-color: #f1f1f1;
-color: black;
+    background-color: #f1f1f1;
+    color: black;
     width: 300px;
     margin: 15px;
     text-align: center;
