lift state up to app level and styling updates

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -13,6 +13,7 @@
     /* text-align: center; */
     font-size: 18px;
     padding: 5px;
+    border-radius: 5px;
 }
 
 .flex-container>.task:hover {
