--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -11,6 +11,7 @@
     text-align: center;
     line-height: 100px;
     font-size: 30px;
+    border-radius: 10px;
 }
 
 .flex-container>.boardLink:hover {
