--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@
 .header {
     overflow: hidden;
     /* background-color: #f1f1f1; */
-    padding: 20px 10px;
+    padding: 10px;
 }
 
 /* Style the header links */
@@ -11,11 +11,11 @@
     color: white;
     background-color: black;
     text-align: center;
-    padding: 12px;
+    padding: 10px;
     text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
+    font-size: 16px;
+    /* line-height: 25px; */
+    border-radius: 5px;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
