--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -3,72 +3,81 @@
     margin: 5px;
     margin-left: 20px;
     padding: 5px;
+    /* background-color: antiquewhite; */
 }
 
 .task-text-box {
-    font-size: 18px;
+    font-size: 15px;
     color: black;
     background-color: #f1f1f1;
     border: none;
-    width: 300px;
+    width: 350px;
+    resize: vertical;
+    margin-left: 7px;
+    /* text-decoration: line-through; */
+}
+
+.task-text-box:hover {
+    opacity: 0.5;
 }
 
 .task-text-box:focus {
     outline: none;
 }
 
+.deleteTask {
+    display: none;
+    margin-left: 5px;
+}
+
+.deleteTask:hover {
+    opacity: 0.5;
+}
+
+.deleteTask img {
+    width: 15px;
+    /* display: none; */
+    /* font-size: 20px; */
+    /* padding: 5px; */
+}
+
+.task-container:hover .deleteTask {
+    display: block;
+}
+
 :root {
-    --form-control-color: rebeccapurple;
+    --form-control-color: rgb(86, 203, 51);
     --form-control-disabled: #959495;
 }
 
-
-*,
+/* *,
 *:before,
 *:after {
     box-sizing: border-box;
-}
-
-.form-control {
-    font-family: system-ui, sans-serif;
-    font-size: 2rem;
-    font-weight: bold;
-    display: grid;
-    grid-template-columns: 1em auto;
-}
-
-.form-control+.form-control {
-    margin-top: 1em;
-}
-
-.form-control--disabled {
-    color: var(--form-control-disabled);
-    cursor: not-allowed;
-}
+} */
 
 input[type="checkbox"] {
-    /* Add if not using autoprefixer */
+    cursor: pointer;
     -webkit-appearance: none;
-    /* Remove most all native input styles */
     appearance: none;
-    /* For iOS < 15 */
     background-color: var(--form-background);
     margin: 0;
     font: inherit;
     color: currentColor;
-    width: 0.8em;
-    height: 0.8em;
+    width: 1.2em;
+    height: 1.2em;
     border: 0.15em solid currentColor;
-    border-radius: 0.15em;
+    border-radius: 0.3em;
     transform: translateY(-0.075em);
     display: grid;
     place-content: center;
+    margin-top: 1px;
 }
 
 input[type="checkbox"]::before {
     content: "";
-    width: 0.4em;
-    height: 0.4em;
+    width: 0.6em;
+    height: 0.6em;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
     transform: scale(0);
     transform-origin: bottom left;
@@ -83,7 +92,10 @@ input[type="checkbox"]:checked::before {
 
 input[type="checkbox"]:disabled {
     --form-control-color: var(--form-control-disabled);
-
     color: var(--form-control-disabled);
     cursor: not-allowed;
+}
+
+input[type="checkbox"]:hover {
+    background-color: rgba(178, 178, 178, 0.621);
 }
