--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,6 +10,7 @@
 }
 
 .card-container h2 {
+    font-family: CircularBold;
     font-size: 25px;
     margin: 0;
     padding-left: 20px;
@@ -43,8 +44,8 @@
 }
 
 #addTask:hover {
-    color: rgb(67, 240, 64);
     cursor: pointer;
+    opacity: 0.5;
 }
 
 hr {
@@ -55,4 +56,13 @@ hr {
     margin-bottom: 30px;
     padding: 0;
     width: 90%;
+}
+
+.headingWrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.headingWrapper .score{
+    margin-right: 30px;
 }
