--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -3,7 +3,6 @@
     margin: 5px;
     margin-left: 20px;
     padding: 5px;
-    /* background-color: antiquewhite; */
 }
 
 .task-text-box {
@@ -13,12 +12,13 @@
     border: none;
     width: 350px;
     resize: vertical;
-    margin-left: 7px;
-    /* text-decoration: line-through; */
+    margin-left: 10px;
+    margin-top: -2px;
+    font-family: CircularBook;
 }
 
 .task-text-box:hover {
-    opacity: 0.5;
+    /* opacity: 0.5; */
 }
 
 .task-text-box:focus {
@@ -36,9 +36,6 @@
 
 .deleteTask img {
     width: 15px;
-    /* display: none; */
-    /* font-size: 20px; */
-    /* padding: 5px; */
 }
 
 .task-container:hover .deleteTask {
@@ -46,7 +43,7 @@
 }
 
 :root {
-    --form-control-color: rgb(86, 203, 51);
+    --form-control-color: rgb(255, 255, 255);
     --form-control-disabled: #959495;
 }
 
@@ -74,6 +71,10 @@ input[type="checkbox"] {
     margin-top: 1px;
 }
 
+input[type="checkbox"]:checked {
+    background-color: black;
+}
+
 input[type="checkbox"]::before {
     content: "";
     width: 0.6em;
@@ -97,5 +98,54 @@ input[type="checkbox"]:disabled {
 }
 
 input[type="checkbox"]:hover {
-    background-color: rgba(178, 178, 178, 0.621);
+    background-color: black;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Strikethrough */
+
+@keyframes strikethrough {
+	from {
+		transform: scaleX(0);
+	}
+	to {
+		transform: scaleX(1);
+	}
+}
+
+.strikethrough {
+	display: inline-block;
+	position: relative;
+	transition: all 0.5s cubic-bezier(.55, 0, .1, 1);
+}
+
+/* .strikethrough:after {
+	content: '';
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 2px;
+	box-shadow: 0 1px rgba(255,255,255,0.6);
+	margin-top: -0.7em;
+	background: black;
+	transform-origin: center left;
+	animation: strikethrough 1s 0.5s cubic-bezier(.55, 0, .1, 1) 1;
+	transition: transform 0.5s cubic-bezier(.55, 0, .1, 1);
+} */
