--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,45 +2,20 @@
     background-color: #f1f1f1;
     color: black;
     min-width: 450px;
-    min-height: 400px;
+    min-height: 300px;
     /* min-height: 400px; */
     margin: 20px;
     padding: 5px;
     border-radius: 5px;
+    overflow: auto;
+    /* resize: both; */
+    resize: vertical;
 }
-
-.card-container h2 {
-    font-family: CircularBold;
-    font-size: 25px;
-    margin: 0;
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    text-align: left;
-    line-height: normal;
-}
-
-/* #addTaskButton{
-    width: 80%;
-    background-color: #f1f1f1;
-    color: black;
-    border: black;
-    border-style: dashed;
-    border-width: 3px;
-    font-size: 25px;
-    font-weight: bold;
-    padding: 5px;
-    margin: 30px;
-    font-family: none; 
-}
-
-#addTaskButton:hover{
-    background-color: beige;
-} */
 
 #addTask {
     font-size: 30px;
     margin-top: -20px;
+    margin-left: 1px;
 }
 
 #addTask:hover {
@@ -61,8 +36,57 @@ hr {
 .headingWrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.headingWrapper .score{
+.headingWrapper h2 {
+    font-family: CircularBold;
+    font-size: 25px;
+    margin: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    text-align: left;
+    line-height: normal;
+}
+
+.headingWrapper h2:hover {
+    opacity: 0.5;
+    cursor: text;
+}
+
+.headingWrapper .edit-title {
+    display: none;
+    height: 24px;
+    width: 24px;
+    margin-top: 5px;
+    padding-left: 10px;
+}
+
+.headingWrapper .score {
     margin-right: 30px;
+}
+
+.edit-title-input {
+    color: black;
+    background-color: #f1f1f1;
+    border: none;
+    width: 350px;
+    resize: vertical;
+    margin-left: 10px;
+    margin-top: -2px;
+    font-family: CircularBold;
+
+    font-family: CircularBold;
+    font-size: 25px;
+    margin: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    text-align: left;
+    line-height: normal;
+}
+
+.edit-title-input:focus {
+    outline: none;
 }
