--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     overflow: auto;
     /* resize: both; */
-    resize: vertical;
+    /* resize: vertical; */
 }
 
 #addTask {
@@ -20,7 +20,8 @@
 
 #addTask:hover {
     cursor: pointer;
-    opacity: 0.5;
+    /* opacity: 0.5; */
+    color: var(--red);
 }
 
 hr {
@@ -71,20 +72,13 @@ hr {
     color: black;
     background-color: #f1f1f1;
     border: none;
-    width: 350px;
-    resize: vertical;
-    margin-left: 10px;
-    margin-top: -2px;
-    font-family: CircularBold;
-
+    width: 360px;
     font-family: CircularBold;
     font-size: 25px;
     margin: 0;
     padding-left: 20px;
     padding-top: 20px;
     padding-bottom: 10px;
-    text-align: left;
-    line-height: normal;
 }
 
 .edit-title-input:focus {
