changing state to only use sortedTasks instead of activeTasks & styling updates

--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -2,6 +2,10 @@
     background-color: var(--red);
 }
 
+.login-buttons:hover {
+    background-color: var(--red-faded);
+}
+
 .login-buttons:focus {
     outline-color: transparent;
     outline-style: solid;
