--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -1,16 +1,26 @@
-.flex-container>.boardLink {
+.flex-container-board-list {
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.flex-container-board-list>.boardLink {
     background-color: #f1f1f1;
     color: black;
     width: 300px;
     padding: 40px;
-    margin: 15px;
+    /* margin: 15px; */
     text-align: center;
     line-height: 100px;
     font-size: 30px;
     border-radius: 10px;
+
 }
 
-.flex-container>.boardLink:hover {
+.flex-container-board-list>.boardLink:hover {
     background-color: var(--red-faded);
     color: white;
 }
@@ -19,7 +29,7 @@
     color: white;
     width: 300px;
     padding: 37px;
-    margin: 15px;
+    /* margin: 15px; */
     text-align: center;
     line-height: 100px;
     font-size: 30px;
