styling updates for score progress concept

--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -1,4 +1,6 @@
 .flex-container-board-list {
+    width: 80%;
+    margin: auto;
     display: flex;
     /* flex-direction: column; */
     flex-wrap: wrap;
