--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -1,5 +1,6 @@
 .flex-container-board-list {
     width: 80%;
+    max-width: 2000px;
     margin: auto;
     display: flex;
     /* flex-direction: column; */
