--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -71,7 +71,8 @@ input[type="checkbox"]:checked {
 }
 
 input[type="checkbox"]:checked:hover {
-    background-color: var(--white);
+    background-color: rgb(255, 157, 157);
+    border-color: rgb(255, 157, 157);
 }
 
 input[type="checkbox"]::before {
