move components to components folder & add settings page

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -84,3 +84,12 @@
     margin-left: -3px;
     margin-top: -1px;
 }
+
+.settings-icon {
+    width: 35px;
+    transition: transform .7s ease-in-out;
+}
+
+.settings-icon:hover {
+    transform: rotate(180deg);
+}
