--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -26,6 +26,11 @@
 .flex-container-board-list>.boardLink:hover {
     background-color: var(--red-faded);
     color: white;
+    background-color: var(--red);
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: bulge;
+    -webkit-animation-iteration-count: initial;
+    /* -webkit-animation-timing-function: ease-in; */
 }
 
 #addBoardButton {
@@ -48,4 +53,7 @@
 #addBoardButton:hover {
     background-color: rgb(86, 86, 86);
     opacity: 1;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: bulge;
+    -webkit-animation-iteration-count: initial;
 }
