--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -92,4 +92,8 @@
 
 .settings-icon:hover {
     transform: rotate(180deg);
+    /* -webkit-animation-duration: 0.5s;
+    -webkit-animation-name: bulge;
+    -webkit-animation-iteration-count: initial;
+    -webkit-animation-timing-function: ease-in; */
 }
