--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -90,7 +90,8 @@
 .edit-icon {
     width: 35px;
     height: 35px;
-    padding: 10px;
+    padding: 15px;
+    margin-top: -4px;
 }
 
 .edit-icon:hover {
