--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,7 @@
     text-align: center;
     padding: 10px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 17px;
     /* line-height: 25px; */
     border-radius: 5px;
 }
@@ -25,7 +25,10 @@
 }
 
 .header .back-button {
+    margin-top: 15px;
+    margin-left: 15px;
     background-color: rgba(255, 255, 255, 0);
+    font-size: 20px;
 }
 
 /* Change the background color on mouse-over */
@@ -38,7 +41,7 @@
 .header a:hover {
     /* background-color: #ddd; */
     color: white;
-    opacity: 0.5;
+    /* opacity: 0.5; */
     cursor: pointer;
 }
 
@@ -53,6 +56,15 @@
     float: right;
     display: flex;
     align-items: center;
+}
+
+.logout-button {
+    margin-top: 15px;
+    margin-right: 15px;
+}
+
+.logout-button:hover {
+    opacity: 0.7;
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@@ -72,6 +84,10 @@
     display: flex;
     align-items: center;
     height: 35px;
+}
+
+.back-button:hover {
+    opacity: 0.6;
 }
 
 .back-button>div {
@@ -105,6 +121,7 @@
 .settings-icon {
     width: 35px;
     transition: transform .7s ease-in-out;
+    margin-right: 20px;
 }
 
 .settings-icon:hover {
