--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -118,6 +118,20 @@
     -webkit-animation-timing-function: ease-in;
 }
 
+.delete-icon {
+    width: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.delete-icon:hover {
+    opacity: 0.5;
+    -webkit-animation-duration: 0.5s;
+    -webkit-animation-name: bulge;
+    -webkit-animation-iteration-count: initial;
+    -webkit-animation-timing-function: ease-in;
+}
+
 .settings-icon {
     width: 35px;
     transition: transform .7s ease-in-out;
