--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -25,12 +25,15 @@
     /* margin-top: -20px; */
     margin-top: -2px;
     margin-left: -3px;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .addTask:hover {
     cursor: pointer;
     opacity: 1;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: bulge;
+    -webkit-animation-iteration-count: infinite;
     /* color: var(--red); */
 }
 
