--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -7,26 +7,28 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 30px;
 }
 
 .flex-container-board-list>.boardLink {
-    background-color: #f1f1f1;
-    color: black;
+    /* background-color: #f1f1f1; */
+    background-color: var(--foreground);
+    /* color: black; */
+    color: var(--text-colour);
     width: 300px;
-    padding: 40px;
+    height: 100px;
+    /* padding: 40px; */
     /* margin: 15px; */
     text-align: center;
     line-height: 100px;
-    font-size: 30px;
+    font-size: 25px;
     border-radius: 10px;
-
+    /* border: solid rgb(55, 54, 54); */
 }
 
 .flex-container-board-list>.boardLink:hover {
-    background-color: var(--red-faded);
-    color: white;
-    background-color: var(--red);
+    background-color: var(--accent);
+    /* color: white; */
     -webkit-animation-duration: 1s;
     -webkit-animation-name: bulge;
     -webkit-animation-iteration-count: initial;
@@ -34,20 +36,20 @@
 }
 
 #addBoardButton {
-    color: white;
+    color: var(--text-colour);
+    height: 92px;
+    line-height: 92px;
     width: 300px;
-    padding: 37px;
+    /* padding: 37px; */
     /* margin: 15px; */
     text-align: center;
-    line-height: 100px;
-    font-size: 30px;
     border-radius: 10px;
-    border: white;
+    border: rgb(158, 158, 158);
     border-style: dashed;
     border-width: 4px;
-    font-size: 80px;
-    font-family: none;
-    opacity: 0.7;
+    font-size: 50px;
+    /* font-family: none; */
+    /* opacity: 0.7; */
 }
 
 #addBoardButton:hover {
