--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -5,19 +5,21 @@
     width: 90%;
     max-width: 2000px;
     align-items: flex-start;
+    gap: 25px;
+    margin-top: 30px;
 }
 
 #addCardButton {
     min-width: 450px;
-    height: 200px;
-    margin: 20px;
+    height: 180px;
+    /* margin: 20px; */
     border-radius: 10px;
     /* background-color: rgb(27, 27, 27); */
-    color: white;
-    border: white;
+    /* color: white;
+    border: white; */
     border-style: dashed;
     border-width: 4px;
-    font-size: 80px;
+    font-size: 60px;
     font-family: none;
     display: grid;
     align-items: center;
