--- a/src/components/ScoreCounter.css
+++ b/src/components/ScoreCounter.css
@@ -1,19 +1,19 @@
 .score-button {
-    background-color: #242424 !important;
+    background-color: var(--background) !important;
 }
 
 @-webkit-keyframes bulge {
   0% {
     transform: scale(1);
-    color: white;
+    color: var(--text-colour);
   }
   10% {
     transform: scale(1.1);
-    color: white;
+    color: var(--text-colour);
   }
   40% {
     transform: scale(1);
-    color: white;
+    color: var(--text-colour);
   }
   100% {
     transform: scale(1);
