--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,17 +4,18 @@
     color: black;
     /* width: 550px; */
     min-width: 450px;
+    /* max-width: 750px; */
     min-height: 300px;
     /* min-height: 400px; */
     /* margin: 20px; */
     padding: 5px;
     padding-bottom: 40px;
-    border-radius: 5px;
+    border-radius: 15px;
     overflow: auto;
     /* resize: both; */
     /* resize: vertical; */
     resize: horizontal;
-    /* flex-grow: 1; */
+    flex-grow: 1;
 }
 
 /* .task-container img {
