--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -6,7 +6,8 @@
 }
 
 .task-textarea-box {
-    font-size: 16px;
+    font-size: 18px;
+    line-height: 25px;
     letter-spacing: 0.1px;
     /* color: black; */
     color: var(--text-colour);
@@ -18,8 +19,8 @@
     width: calc(100% - 60px);
     resize: none;
     margin-left: 12px;
-    margin-top: -2px;
-    margin-bottom: -5px;
+    margin-top: -5px;
+    /* margin-bottom: -5px; */
     font-family: CircularMedium;
 }
 
@@ -30,11 +31,12 @@
 .deleteTask {
     display: none;
     /* margin-left: 5px; */
-    margin-top: 1px;
+    margin-top: 3px;
 }
 
 .deleteTask:hover {
-    opacity: 0.5;
+    /* opacity: 0.5; */
+    cursor: pointer;
 }
 
 .deleteTask img {
