--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,21 +1,20 @@
 .card-container {
-    /* background-color: #f1f1f1; */
     background-color: var(--foreground);
     color: black;
-    /* width: 550px; */
     min-width: 450px;
-    /* max-width: 750px; */
-    min-height: 300px;
-    /* min-height: 400px; */
-    /* margin: 20px; */
-    padding: 5px;
+    /* min-height: 200px; */
+    padding: 2px;
     padding-bottom: 40px;
     border-radius: 15px;
     overflow: auto;
+    flex-grow: 1;
+    /* width: 550px; */
+    /* max-width: 750px; */
+    /* min-height: 400px; */
+    /* margin: 20px; */
     /* resize: both; */
     /* resize: vertical; */
-    resize: horizontal;
-    flex-grow: 1;
+    /* resize: horizontal; */
 }
 
 /* .task-container img {
@@ -39,18 +38,15 @@
     -webkit-animation-duration: 1s;
     -webkit-animation-name: bulge;
     -webkit-animation-iteration-count: infinite;
-    /* color: var(--accent); */
 }
 
 hr {
-    display: block;
-    height: 1px;
+    /* display: block; */
     border: 0;
-    /* border-top: 1px solid #00000034; */
-    border-top: 1px solid #ffffff82;
-    margin-bottom: 30px;
-    padding: 0;
-    width: 90%;
+    border-top: 1px solid var(--text-colour);
+    opacity: 0.5;
+    margin-bottom: 20px;
+    width: 95%;
 }
 
 .headingWrapper {
