--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -1,6 +1,7 @@
 .card-list-container {
     display: flex;
     flex-wrap: wrap;
+    /* flex-direction: column; */
     justify-content: flex-start;
     width: 90%;
     max-width: 2000px;
@@ -11,19 +12,23 @@
 
 #addCardButton {
     min-width: 450px;
-    height: 180px;
-    /* margin: 20px; */
-    border-radius: 10px;
+    /* max-width: 450px; */
+    height: 160px;
+    margin-bottom: 30px;
+    border-radius: 15px;
     /* background-color: rgb(27, 27, 27); */
     /* color: white;
     border: white; */
     border-style: dashed;
+    border-color: var(--text-colour);
     border-width: 4px;
     font-size: 60px;
     font-family: none;
     display: grid;
     align-items: center;
     opacity: 0.7;
+    background-color: var(--foreground);
+    flex-grow: 1;
 }
 
 #addCardButton:hover {
