--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -3,18 +3,22 @@
     flex-wrap: wrap;
     /* flex-direction: column; */
     justify-content: flex-start;
-    width: 90%;
-    max-width: 2000px;
-    align-items: flex-start;
+    width: 92%;
+    max-width: 1500px;
+    /* align-items: flex-start; */
+    align-items: stretch;
     gap: 25px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
+    margin-top: 150px;
+    margin-bottom: 50px;
 }
 
 #addCardButton {
-    min-width: 450px;
+    background-color: var(--foreground);
+    /* min-width: 450px; */
     /* max-width: 450px; */
-    height: 160px;
-    margin-bottom: 30px;
+    /* height: 160px; */
+    /* margin-bottom: 30px; */
     border-radius: 15px;
     /* background-color: rgb(27, 27, 27); */
     /* color: white;
@@ -27,8 +31,8 @@
     display: grid;
     align-items: center;
     opacity: 0.7;
-    background-color: var(--foreground);
     flex-grow: 1;
+    flex-basis: 48%;
 }
 
 #addCardButton:hover {
