--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,27 +1,32 @@
 .task-container {
     display: flex;
-    /* margin: 5px; */
-    margin-left: 20px;
     padding: 5px;
+    padding-left: 20px;
+}
+
+.task-container:hover textarea{
+    /* border-left: solid var(--accent) 1px; */
+    opacity: 0.6;
 }
 
 .task-textarea-box {
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 0.1px;
-    /* color: black; */
     color: var(--text-colour);
-    /* background-color: #f1f1f1; */
     background-color: var(--foreground);
     border: none;
-    width: -webkit-calc(100% - 60px);
-    width: -moz-calc(100% - 60px);
-    width: calc(100% - 60px);
+    width: -webkit-calc(100% - 85px);
+    width: -moz-calc(100% - 85px);
+    width: calc(100% - 85px);
     resize: none;
     margin-left: 12px;
     margin-top: -5px;
-    /* margin-bottom: -5px; */
     font-family: CircularMedium;
+}
+
+.highlight {
+    background-color: var(--accent);
 }
 
 .task-textarea-box:focus {
@@ -30,17 +35,17 @@
 
 .deleteTask {
     display: none;
-    /* margin-left: 5px; */
-    margin-top: 3px;
+    margin-left: 5px;
 }
 
-.deleteTask:hover {
-    /* opacity: 0.5; */
+.deleteTask img:hover{
     cursor: pointer;
+    background-color: var(--accent);
 }
 
 .deleteTask img {
     width: 15px;
+    padding: 1px;
 }
 
 .task-container:hover .deleteTask {
@@ -105,53 +110,3 @@ input[type="checkbox"]:disabled {
 input[type="checkbox"]:hover {
     background-color: var(--accent);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Strikethrough */
-
-/* @keyframes strikethrough {
-    from {
-        transform: scaleX(0);
-    }
-
-    to {
-        transform: scaleX(1);
-    }
-} */
-
-/* .strikethrough {
-	display: inline-block;
-	position: relative;
-	transition: all 0.5s cubic-bezier(.55, 0, .1, 1);
-} */
-
-/* .strikethrough:after {
-	content: '';
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 2px;
-	box-shadow: 0 1px rgba(255,255,255,0.6);
-	margin-top: -0.7em;
-	background: black;
-	transform-origin: center left;
-	animation: strikethrough 1s 0.5s cubic-bezier(.55, 0, .1, 1) 1;
-	transition: transform 0.5s cubic-bezier(.55, 0, .1, 1);
-} */
