--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,54 @@
 }
 
 :root {
-  --red: rgb(230, 70, 70);
-  --red-faded: rgb(245, 95, 95);
-  /* --white: #f1f1f1; */
-  --white: #e6e6e6;
-  --black: #141414;
-  --black-faded: #242424;
-  --sl-purple: rgb(35,34,50); /* sl-purple */
-  --sl-dark-purple: rgb(24,24,35); /* sl-dark-purple */
-  --sl-white: rgb(247,247,254); /* sl-white */
-  --sl-red: rgb(230,91,64); /* sl-red */
+  font-family: CircularMedium, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  /* color-scheme: light dark; */
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-  --background: var(--sl-dark-purple);
-  --foreground: var(--sl-purple);
-  --text-colour: var(--sl-white);
-  --accent: var(--sl-red);
+  /*///////////// DARK THEMES /////////////*/
+
+  /* purple haze */
+  --purple-haze-fg: rgb(35, 34, 50);
+  --purple-haze-bg: rgb(24, 24, 35);
+  --purple-haze-text-colour: rgb(247, 247, 254);
+  --purple-haze-accent: rgb(230, 91, 64);
+  --purple-haze-accent-2: rgba(106, 86, 172, 0.468);
+  /* --ph-accent-2: rgba(34, 97, 38, 0.468); */
+
+  /* granite */
+  --granite-fg: #242424;
+  --granite-bg: #141414;
+  --granite-text-colour: rgb(247, 247, 254);
+  --granite-accent: rgb(230, 91, 64);
+  --granite-accent-2: rgba(138, 33, 1, 0.444);
+
+  /* aqua mentos */
+  --aqua-mentos-fg: rgb(14, 31, 45);
+  --aqua-mentos-bg: rgb(19, 21, 27);
+  --aqua-mentos-text-colour: rgb(210, 225, 230);
+  --aqua-mentos-accent: rgb(78, 160, 125);
+  --aqua-mentos-accent-2: rgba(215, 126, 94, 0.878);
+
+  /* cherry violet */
+  --cherry-violet-fg: rgb(48, 47, 66);
+  --cherry-violet-bg: rgb(33, 32, 52);
+  --cherry-violet-text-colour: rgb(247, 247, 254);
+  --cherry-violet-accent: rgb(220, 118, 146);
+  --cherry-violet-accent-2: rgba(231, 176, 94, 0.802);
+
+  /* --background: var(--ph-bg);
+  --foreground: var(--ph-fg);
+  --text-colour: var(--ph-white);
+  --accent: var(--ph-accent);
+  --accent-2: var(--ph-accent-2); */
+
+  color: var(--text-colour);
+  background-color: var(--background);
 }
 
 .smallButton {
