--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,17 +1,21 @@
 .header {
     overflow: hidden;
+    background-color: white;
     background-color: var(--background);
-    padding: 20px;
+    width: 100vw;
+    /* padding: 20px; */
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .sticky {
     position: fixed;
     top: 0;
-    width: 97vw;
-    margin-left: -7px;
+    left: 0;
+    /* width: 100vw; */
+    /* margin-left: -7px; */
     z-index: 100;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -15px;
-
 }
 
 .header a {
@@ -32,13 +36,16 @@
 
 .header .back-button {
     margin-top: 10px;
-    margin-left: 10px;
-    background-color: rgba(255, 255, 255, 0);
+    margin-left: 20px;
+    background-color: var(--background);
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    height: 35px;
 }
 
 .header a:hover .back-button {
-    opacity: 0.1;
+    /* opacity: 0.1; */
 }
 
 .header a:hover {
@@ -59,7 +66,7 @@
 
 .logout-button {
     margin-top: 15px;
-    margin-right: 15px;
+    margin-right: 30px;
 }
 
 .logout-button:hover {
@@ -77,12 +84,6 @@
     .header-right {
         float: none;
     }
-}
-
-.back-button {
-    display: flex;
-    align-items: center;
-    height: 35px;
 }
 
 .back-button:hover {
@@ -105,6 +106,7 @@
     width: 28px;
     height: 28px;
     padding: 15px;
+    margin-right: 20px;
     margin-top: -2px;
 }
 
@@ -131,9 +133,10 @@
 }
 
 .settings-icon {
-    width: 35px;
+    width: 30px;
     transition: transform .7s ease-in-out;
     margin-right: 20px;
+    margin-top: 6px;
 }
 
 .settings-icon:hover {
