--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,5 +1,11 @@
+.loginForm {
+    min-width: 18em;
+    margin-top: 100px;
+}
+
 .login-buttons {
     background-color: var(--accent);
+    color: var(--text-colour);
 }
 
 .login-buttons:hover {
@@ -15,13 +21,10 @@
     box-shadow: 0 0 0 1px #ffffff8a;
 }
 
-.loginForm {
-    min-width: 18em
-}
 
 .inputText {
     font-size: 1.3em;
-    width: 100%;
+    /* width: 100%; */
     padding: 8px;
     background-color: var(--foreground);
     color: var(--text-colour);
