--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,6 @@
     background-color: white;
     background-color: var(--background);
     width: 100vw;
-    /* padding: 20px; */
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -12,8 +11,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    /* width: 100vw; */
-    /* margin-left: -7px; */
     z-index: 100;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -15px;
 }
@@ -21,7 +18,6 @@
 .header a {
     float: left;
     color: var(--text-colour);
-    background-color: var(--accent);
     text-align: center;
     padding: 10px;
     text-decoration: none;
@@ -29,23 +25,20 @@
     border-radius: 5px;
 }
 
-.header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-}
-
 .header .back-button {
-    margin-top: 10px;
     margin-left: 20px;
-    background-color: var(--background);
     font-size: 20px;
     display: flex;
     align-items: center;
     height: 35px;
 }
 
-.header a:hover .back-button {
-    /* opacity: 0.1; */
+.board-back-button {
+    margin-top: 9px;
+}
+
+.back-button > div {
+    margin-top: -1px;
 }
 
 .header a:hover {
@@ -65,8 +58,8 @@
 }
 
 .logout-button {
-    margin-top: 15px;
     margin-right: 30px;
+    background-color: var(--accent);
 }
 
 .logout-button:hover {
@@ -97,9 +90,7 @@
 }
 
 .back-icon {
-    width: 25px;
-    margin-left: -3px;
-    margin-top: -1px;
+    width: 18px;
 }
 
 .edit-icon {
@@ -136,9 +127,13 @@
     width: 30px;
     transition: transform .7s ease-in-out;
     margin-right: 20px;
-    margin-top: 6px;
 }
 
 .settings-icon:hover {
     transform: rotate(180deg);
+}
+
+.line-icon {
+    height: 40px;
+    opacity: 0.5;
 }
