bring user and board queries to the app level and add token expiry check to every api call

--- a/src/components/SideNavBar.css
+++ b/src/components/SideNavBar.css
@@ -149,6 +149,11 @@
 }
 
 .sidenav-user { 
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
+  /* margin-top: auto; */
+}
+
+.sidenav-logout { 
   margin-top: auto;
+  /* margin-bottom: 15px; */
 }
