--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -154,7 +154,7 @@
     border-radius: 5px;
     padding-left: 20px;
     padding-right: 20px !important; */
-
+    margin-right: 20px;
 }
 
 .logo-text-2 {
