--- a/src/components/ScoreCounter.css
+++ b/src/components/ScoreCounter.css
@@ -1,19 +1,21 @@
-.score-button {
-}
+.score-button {padding-left: 4px !important;}
 
 @-webkit-keyframes bulge {
   0% {
     transform: scale(1);
     color: var(--text-colour);
   }
+
   10% {
     transform: scale(1.1);
     color: var(--text-colour);
   }
+
   40% {
     transform: scale(1);
     color: var(--text-colour);
   }
+
   100% {
     transform: scale(1);
   }
