--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     background-color: white;
     background-color: var(--background);
+    display: flex;
 
     width: 100vw;
     padding-top: 10px;
@@ -36,7 +37,7 @@
 }
 
 .board-back-button {
-    margin-top: 8px;
+    /* margin-top: 8px; */
 }
 
 .back-button>div {
@@ -54,9 +55,13 @@
 }
 
 .header-right {
-    float: right;
+    /* float: right; */
     display: flex;
     align-items: center;
+    margin-left: auto;
+    margin-right: 15px;
+    margin-top: 5px;
+    /* align-self: center; */
 }
 
 .logout-button {
@@ -102,7 +107,7 @@
     width: 28px;
     height: 28px;
     padding: 15px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     margin-top: -2px;
 }
 
