--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -77,7 +77,7 @@
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
     .header a {
         float: none;
         display: block;
@@ -87,7 +87,7 @@
     .header-right {
         float: none;
     }
-}
+} */
 
 .back-button:hover {
     opacity: 0.6;
