--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ button {
 
   /* MISC STYLES */
   .sidebar-wrapper {
-    display: none;
+    /* display: none; */
   }
 
   .header {
@@ -79,15 +79,20 @@ button {
   }
 
   .score-input {
-    width: 20px;
+    /* width: 20px; */
     margin-top: 3px;
   }
 
-  .menu-icon{
-    margin: auto;
-    margin-left: 15px;
+  .menu-icon-mobile {
+    margin-left: 20px;
     margin-top: 5px;
-    opacity: 1;
+    width: 25px;
+    height: 25px;
+    padding: 10px;
+  }
+
+  .logo-text-wrapper {
+    margin: auto !important;
   }
 
   /* HOMEPAGE STYLES */
@@ -104,7 +109,7 @@ button {
     margin: auto;
     margin-top: 20px;
   }
-  
+
   /* SETTINGS STYLES */
   .settings-content-wrapper {
     /* width: 80%; */
@@ -152,7 +157,7 @@ button {
   }
 
   .task-textarea-box {
-    margin-left: 5px !important;
+    margin-left: 6px !important;
   }
 
   .task-container:hover textarea {
