--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -13,6 +13,7 @@
     /* resize: both; */
     /* resize: vertical; */
     /* resize: horizontal; */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .addTask {
