--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -23,7 +23,14 @@
     opacity: 0.8;
 }
 
-.addTask:hover {
+.deleteCategory{
+    width: 21px;
+    margin-top: 10px;
+    margin-right: 20px;
+    opacity: 0.8;
+}
+
+.addTask:hover, .deleteCategory:hover {
     cursor: pointer;
     opacity: 1;
     -webkit-animation-duration: 1s;
