--- a/src/components/ThemeCard.css
+++ b/src/components/ThemeCard.css
@@ -11,9 +11,10 @@
 }
 
 .theme-card-wrapper:hover, .selected-wrapper:hover {
-    -webkit-animation-duration: 1s;
+    /* -webkit-animation-duration: 1s;
     -webkit-animation-name: bulge;
-    -webkit-animation-iteration-count: initial;
+    -webkit-animation-iteration-count: initial; */
+    opacity: 0.7;
     cursor: pointer;
 }
 
@@ -26,7 +27,7 @@
     font-family: CircularBlack;
 }
 
-.theme-card-wrapper p{
+.theme-card-wrapper p {
     text-align: left;
     margin: 0;
 }
@@ -35,11 +36,12 @@
     border-radius: 15px;
     margin: 15px;
     padding: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .selected-wrapper {
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
 }
 
 .outline {
