--- a/src/components/BoardList.css
+++ b/src/components/BoardList.css
@@ -9,29 +9,44 @@
     gap: 30px;
 }
 
-.flex-container-board-list>.boardLink {
+.board-list-item-wrapper {
+    width: 280px;
     background-color: var(--foreground);
+    border-radius: 10px;
+    position: relative;
+}
+
+.board-list-item-wrapper:hover {
+    background-color: var(--accent);
+}
+
+.board-list-item-score {
+    background-color: var(--background);
+    padding: 6px;
+    width: 35px;
+    height: 25px;
+    line-height: 25px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 5px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 15px;
+}
+
+.boardLink {
     color: var(--text-colour);
-    width: 300px;
-    height: 100px;
     text-align: center;
     line-height: 100px;
     font-size: 25px;
-    border-radius: 10px;
 }
 
-.flex-container-board-list>.boardLink:hover {
-    background-color: var(--accent);
-    /* -webkit-animation-duration: 1s;
-    -webkit-animation-name: bulge;
-    -webkit-animation-iteration-count: initial; */
-}
 
 #addBoardButton {
     color: var(--text-colour);
     height: 92px;
     line-height: 92px;
-    width: 300px;
+    width: 280px;
     text-align: center;
     border-radius: 10px;
     border: rgb(158, 158, 158);
@@ -43,7 +58,4 @@
 #addBoardButton:hover {
     background-color: rgb(86, 86, 86);
     opacity: 1;
-    /* -webkit-animation-duration: 1s;
-    -webkit-animation-name: bulge;
-    -webkit-animation-iteration-count: initial; */
 }
