--- a/src/components/ScoreCounter.css
+++ b/src/components/ScoreCounter.css
@@ -49,6 +49,12 @@
 }
 
 .star-icon {
-  margin-top: 5px;
-  width: 16px;
+  opacity: 0.2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-top: 4px;
+  margin-left: 5px;
+  width: 40px;
+  z-index: -100;
 }
