--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -6,33 +6,58 @@
     overflow: auto;
     min-width: 550px;
     flex-grow: 1;
-    flex-basis: 48%;
+    /* flex-basis: 48%; */
+    flex-basis: 30%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     /* width: 550px; */
     /* max-width: 750px; */
     /* min-height: 400px; */
     /* resize: both; */
     /* resize: vertical; */
     /* resize: horizontal; */
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.addTaskWrapper {
+    display: flex;
+    /* gap: 14px; */
+    gap: 12px;
+    margin-top: 3px;
 }
 
 .addTask {
     width: 21px;
-    margin-top: -3px;
-    margin-left: -1px;
-    opacity: 0.8;
+    height: 21px;
+    margin-top: -2px;
+    /* margin-top: -1px !important; */
+    /* margin-left: -1px; */
+    opacity: 0.4;
+    /* border-color: var(--text-colour) !important; */
 }
 
-.deleteCategory{
+.addTaskText {
+    opacity: 0.4;
+    margin-top: -6px;
+    font-size: 18px;
+}
+
+
+.deleteCategory {
     width: 21px;
     margin-top: 10px;
     margin-right: 25px;
     opacity: 0.4;
 }
 
-.addTask:hover, .deleteCategory:hover {
+.addTaskWrapper:hover {
     cursor: pointer;
-    opacity: 1;
+}
+
+.addTaskWrapper:hover > .addTaskText, .deleteCategory:hover {
+    opacity: 0.6;
+}
+
+.addTaskWrapper:hover > .addTask {
+    opacity: 0.6;
 }
 
 hr {
