--- a/src/components/CardList.css
+++ b/src/components/CardList.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     width: 95%;
-    max-width: 1600px;
+    /* max-width: 1600px; */
     align-items: stretch;
     gap: 25px;
     /* margin-top: 120px; */
@@ -23,7 +23,8 @@
     align-items: center;
     opacity: 0.7;
     flex-grow: 1;
-    flex-basis: 48%;
+    /* flex-basis: 48%; */
+    flex-basis: 30%;
 }
 
 #addCardButton:hover {
