--- a/src/components/SideNavBar.css
+++ b/src/components/SideNavBar.css
@@ -7,25 +7,14 @@
   z-index: 200;
   display: flex;
   flex-direction: column;
-  /* flex-direction: row-reverse; */
   border-top-right-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .toggle-wrapper {
   display: flex;
-  /* flex-direction: column; */
   flex-direction: row-reverse;
 }
-
-/* .sidebar-wrapper > button {
-  height: 40px;
-  margin-right: 15px;
-  margin-top: 110px;
-  background-color: var(--background);
-  color: var(--text-colour);
-  opacity: 0.6;
-} */
 
 .menu-icon:hover, .sidebar-icon:hover {
   background-color: var(--background);
@@ -44,12 +33,10 @@
 .menu-icon, .sidebar-icon {
   opacity: 0.6;
   border-radius: 10px;
-  /* margin-top: 15px; */
 }
 
 .sidebar-icon {
   padding: 8px;
-  /* margin-top: 5px; */
   margin-top: 23px;
   height: 30px;
   margin-right: 10px;
@@ -58,7 +45,6 @@
 .sidenav-links-wrapper {
   display: flex;
   flex-direction: column;
-  /* gap: 10px; */
   margin-top: 30px;
 }
 
@@ -90,7 +76,6 @@
 }
 
 .sidenav-link-boards {
-  /* flex-direction: column; */
   gap: 10px;
 }
 
@@ -101,7 +86,7 @@
 .sidenav-link-boards-sub>div {
   align-self: flex-start;
   margin-left: 10px;
-  border-left: solid var(--accent-2) 3px;
+  border-left: solid var(--text-colour) 3px;
 }
 
 .sidenav-link-boards-sub>div>a {
@@ -136,6 +121,10 @@
   border-left: solid var(--accent) 3px !important;
 }
 
+.highlight-board-link-text {
+  color: var(--accent) !important;
+}
+
 .hidden {
   display: none;
 }
@@ -148,13 +137,7 @@
   transform: rotate(90deg);
 }
 
-.sidenav-user {
-  /* margin-bottom: 15px; */
-  /* margin-top: auto; */
-}
-
 .sidenav-logout {
   margin-top: auto;
-  /* margin-bottom: 15px; */
 }
 
