--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -41,6 +41,7 @@
 .deleteTask img:hover{
     cursor: pointer;
     background-color: var(--accent);
+    border-radius: 3px;
 }
 
 .deleteTask img {
