--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -20,18 +20,30 @@
 .addTaskWrapper {
     display: flex;
     /* gap: 14px; */
-    gap: 12px;
-    margin-top: 3px;
+    gap: 13px;
+    /* margin-top: 3px; */
+    padding-bottom: 10px;
+    padding-top: 2px;
 }
 
-.addTask {
+/* plain plus symbol */
+/* .addTask {
     width: 21px;
     height: 21px;
     margin-top: -2px;
-    /* margin-top: -1px !important; */
-    /* margin-left: -1px; */
     opacity: 0.4;
-    /* border-color: var(--text-colour) !important; */
+} */
+
+/* plus with box */
+.addTask {
+    margin-top: -2px;
+    opacity: 0.4;
+    border-color: var(--text-colour) !important;
+    border: solid 2px;
+    border-radius: 5px;
+    padding: 2px;
+    width: 12px;
+    height: 12px;
 }
 
 .addTaskText {
@@ -39,7 +51,6 @@
     margin-top: -6px;
     font-size: 18px;
 }
-
 
 .deleteCategory {
     width: 21px;
@@ -53,11 +64,11 @@
 }
 
 .addTaskWrapper:hover > .addTaskText, .deleteCategory:hover {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 .addTaskWrapper:hover > .addTask {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 hr {
@@ -119,3 +130,11 @@ hr {
 .edit-title-input:focus {
     outline: none;
 }
+
+.new-task-container {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    padding-left: 20px;
+}
+
