--- a/src/components/ThemeCard.css
+++ b/src/components/ThemeCard.css
@@ -7,6 +7,7 @@
     max-width: 300px;
     align-items: center;
     flex-basis: 30%;
+    /* flex-basis: 48%; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     position: relative;
 
